# larousse-api

./: .gitignore  CHANGELOG.md  README  README.md  build.gradle  larousse.cabal  settings.gradle
.github/workflows/: spring-boot-tests.yml
app/: Main.hs
docs/: ARCHITECTURE.md
src/: Larousse.hs
src/main/java/io/github/aloussase/larousse/: LarousseApplication.java
src/main/java/io/github/aloussase/larousse/core/config/: RetryConfig.java
src/main/java/io/github/aloussase/larousse/core/exception/: DomainException.java
src/main/java/io/github/aloussase/larousse/core/exception/handler/: GlobalExceptionHandler.java
src/main/java/io/github/aloussase/larousse/search/config/: SearchConfig.java
src/main/java/io/github/aloussase/larousse/search/controller/: SearchController.java
src/main/java/io/github/aloussase/larousse/search/domain/entity/: Definition.java
src/main/java/io/github/aloussase/larousse/search/domain/repository/: SearchRepository.java
src/main/java/io/github/aloussase/larousse/search/domain/service/: SearchService.java
src/main/java/io/github/aloussase/larousse/search/dto/: DefinitionDto.java
src/main/java/io/github/aloussase/larousse/search/infrastructure/: JsoupSearchRepository.java  MacacoSearchRepository.java
src/main/resources/: application.properties  chat.html
src/test/java/io/github/aloussase/larousse/: LarousseApplicationTests.java
src/test/java/io/github/aloussase/larousse/search/controller/: SearchControllerTest.java
src/test/java/io/github/aloussase/larousse/search/infrastructure/: JsoupSearchRepositoryTest.java
(+1 files in other folders)
