cabal-version:   3.0
name:            larousse
version:         0.1.0.0
synopsis:        REST API to get definitions from the Larousse dictionary

-- description:
homepage:        https://github.com/LanguageLearningStuff/larousse-api
license:         MIT
license-file:    LICENSE
author:          Alexander Goussas
maintainer:      goussasalexander@gmail.com

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Larousse

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base     ^>=4.17.2.1
    , scalpel
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    OverloadedStrings
    DeriveAnyClass
    DeriveGeneric

executable larousse
  import:             warnings
  main-is:            Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base            ^>=4.17.2.1
    , larousse
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

test-suite larousse-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    , base      ^>=4.17.2.1
    , larousse
